Add 'http' as a stop-word

--- a/dist.ini
+++ b/dist.ini
@@ -9,4 +9,4 @@ copyright_year   = 2012
 AnyEvent::HTTP = 2
 
 [%PodWeaver]
--StopWords.include = TODO featureful
+-StopWords.include = TODO featureful http
